28/7/2006 Ace Jones <acejones@users.sf.net>
	* Fixed a compilation bug on GCC 4.1

20/7/2006:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Revert last change to ofxdump, as it requires a system-dependent header (plus it didn't compile on my system)
	* Make both curl and libxml++ optional for compilation.
	* Add some debug output.
	* Update tree.hh

15/7/2006 Ace Jones <acejones@users.sf.net>
	* Modified build script to not build ofxconnect if libxml++1.0 is
	  missing.

12/6/2006 Ace Jones <acejones@users.sf.net>
	* Fixed a compilation bug on GCC 4.1

28/3/2006 Ace Jones <acejones@users.sf.net>
	* Fixed an improper header reference in ofxpartner.cpp/h
	* Fixed a segfault if ofxdump is run without a file

28/2/2006 Ace Jones <acejones@users.sf.net>
	* Removed Qt requirement accidentally introduced in my last checkin

20/2/2006 Ace Jones <acejones@users.sf.net>
	* Added sample code to ofxconnect to demonstrate how to contact the
	  OFX partner server 

15/2/2006 Ace Jones <acejones@users.sf.net>
	* Fixed #1408764.  Buffer overrun in MESSAGE tag handling.
	* Fixed a memory leak in OfxStatusContainer::add_attribute()

20/1/2006 Ace Jones <acejones@users.sf.net>
	* Print out bank id, branch id, and account number in ofxdump
	* Fixed a bug under gcc 4.0.2 64-bit where errno is not found in ofxdump
	* Fixed a build problem where @LIBOBJ@ was not being substituted 

16/1/2006 Ace Jones <acejones@users.sf.net>
	* Added OfxFiServiceInfo struct.  Need this for communicating with the
	  partner server.  Will add the code for that next.
	* Added broker_id to OfxAccountData

17/12/2005 Ace Jones <acejones@users.sf.net>
	* Fixed ofxdump to give a reasonable error if you run it on a file that
	  doesn't exist.
	* Added proper libcurl.m4 to check for existence & compilability of
	  libcurl
	* Make libcurl optional again by handling its absense in ofxconnect

17/11/2005 Martin Preuss <aquamaniac@users.sf.net>
	* added pkg-config file to spec file