@@ -1,3 +1,7 @@
+3/8/2006 David Resier <dbreiser@earthlink.net>
+	* Added fields used in stock splits (newunits, oldunits)
+	Patch applied by Ace Jones <acejones@users.sf.net>
+
 28/7/2006 Ace Jones <acejones@users.sf.net>
 	* Fixed a compilation bug on GCC 4.1
 
